name:                twitter
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/twitter#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable twitter
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
                base >= 4.5 && < 5
              , directory
              , transformers-base
              , transformers
              , monad-control
              , lens
              , containers
              , bytestring
              , text
              , data-default
              , resourcet
              , conduit
              , conduit-extra
              , http-conduit >= 2.0 && < 2.2
              , aeson
              , authenticate-oauth
              , twitter-types
              , twitter-types-lens
              , twitter-conduit